--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always",
+    "source.sortImports": "explicit",
   },
   "eslint.options": {
     "cache": true,
