--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "lint": "nr build && eslint . --cache --fix",
     "lint:check": "nr build && eslint . --cache",
     "lint:inspect": "nr build && eslint --inspect-config",
+    "lint:gen": "eslint-config-inspector build --outDir docs",
     "prepare": "simple-git-hooks",
-    "prepack": "nr build",
+    "prepack": "nr lint:gen && nr build",
     "release": "bumpp && pnpm publish"
   },
   "peerDependencies": {
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.23.1",
+    "@eslint/config-inspector": "^0.5.6",
     "@rollup/plugin-json": "^6.1.0",
     "@tsconfig/recommended": "1.0.8",
     "@types/node": "^22.9.0",
