--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint": "nr build && eslint . --cache --fix",
     "lint:check": "nr build && eslint . --cache",
     "lint:inspect": "nr build && eslint --inspect-config",
-    "lint:gen": "eslint-config-inspector build --outDir docs --base \"/eslint-config/\" && nodetouch ./docs/.nojekyll",
+    "lint:gen": "eslint-config-inspector build --base \"/eslint-config/\" && nodetouch ./docs/.nojekyll",
     "prepare": "simple-git-hooks",
     "prepack": "nr lint:gen && nr build",
     "release": "bumpp && pnpm publish"
