--- a/.github/workflows/deploy_pr.yml
+++ b/.github/workflows/deploy_pr.yml
@@ -16,11 +16,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # install node.js
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "22.11"
 
@@ -30,7 +30,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Build the project
-        run: npm build
+        run: npm run build
 
       # Runs a single command using the runners shell
       - name: Try to build the ESLint config preview site
@@ -38,7 +38,7 @@ jobs:
 
       # use actions-gh-pages to deploy dist to gh-pages
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           # github will auto-generate a token for this job and use it
           github_token: ${{ secrets.GITHUB_TOKEN }}
