--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "lint": "nr build && eslint . --cache --fix",
     "lint:check": "nr build && eslint . --cache",
     "lint:inspect": "nr build && eslint --inspect-config",
-    "lint:gen": "nlx @eslint/config-inspector build --base \"/eslint-config/\"",
     "prepare": "simple-git-hooks",
-    "prepack": "nr lint:gen && nr build",
+    "prepack": "nr build",
     "release": "bumpp && pnpm publish"
   },
   "peerDependencies": {
