--- a/package.json
+++ b/package.json
@@ -48,18 +48,18 @@
     }
   },
   "dependencies": {
-    "@antfu/eslint-config": "^3.9.2"
+    "@antfu/eslint-config": "^3.14.0"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.23.1",
+    "@antfu/ni": "^23.2.0",
     "@rollup/plugin-json": "^6.1.0",
     "@tsconfig/recommended": "1.0.8",
-    "@types/node": "^22.9.0",
-    "bumpp": "^9.8.1",
-    "eslint": "^9.15.0",
+    "@types/node": "^22.10.7",
+    "bumpp": "^9.10.1",
+    "eslint": "^9.18.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "lint-staged": "^15.2.10",
-    "rollup": "^4.27.3",
+    "lint-staged": "^15.4.1",
+    "rollup": "^4.31.0",
     "rollup-plugin-delete": "^2.1.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild": "^6.1.1",
@@ -67,11 +67,12 @@
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   },
   "pnpm": {
     "overrides": {
       "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+      "eslint-plugin-perfectionist": ">=4.7.0",
       "micromatch@<4.0.8": ">=4.0.8"
     }
   },
